force-app/main/default/objects/pse__Resource_Replacement__c/fields/pse__Show_All_Records__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_All_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true all records are shown on the Multiple Resource Replacement page for the selected project when no filter criteria are set. When false (default), no records are shown.</description>
    <inlineHelpText>When true all records are shown on the Multiple Resource Replacement page for the selected project when no filter criteria are set. When false (default), no records are shown.</inlineHelpText>
    <label>Show All Records</label>
    <type>Checkbox</type>
</CustomField>