force-app/main/default/objects/pse__Resource_Replacement__c/fields/pse__Show_Assignments__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Assignments__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true (default), assignments are shown on the Multiple Resource Replacement page. When false, assignments are not shown.</description>
    <inlineHelpText>When true (default), assignments are shown on the Multiple Resource Replacement page. When false, assignments are not shown.</inlineHelpText>
    <label>Show Assignments</label>
    <type>Checkbox</type>
</CustomField>