force-app/main/default/objects/pse__Resource_Replacement__c/fields/pse__Show_Resource_Requests__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Resource_Requests__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, resource requests are shown on the Multiple Resource Replacement page. When false (default), resource requests are not shown.</description>
    <inlineHelpText>When true, resource requests are shown on the Multiple Resource Replacement page. When false (default), resource requests are not shown.</inlineHelpText>
    <label>Show Resource Requests</label>
    <type>Checkbox</type>
</CustomField>